--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <link href="./css/guid.css" rel="stylesheet" type="text/css">
+    <link href="./css/main.css" rel="stylesheet" type="text/css">
+    <link href="./css/card.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <img src="image/freee-mv.png" alt="リデザインのプロトタイプが載っているメインビジュアル" class="mainvisual">
@@ -17,7 +18,7 @@
       〜経費申請をより効率化する〜
     </h1>
     <section class="content">
-      <div class="half">
+      <div class="card-container-half">
         <div class="card">
           <div class="card-header">
             1.UserResearch
@@ -25,7 +26,7 @@
           <div class="card-body">
             <p>
               まずは要求定義をするために調査します。思いつく限りの質問を出し、グループ化し整理します。<br>
-              いつ、どこで、どのデバイスで経費申請をしたかを聞く準備をします。
+              <span class="letter-accent">いつ、どこで、どのデバイスで</span>経費申請をしたかを聞く準備をします。
               この際、ユーザーがエピソードや体験を話しやすいオープンクエスチョンにすることを気をつけました。
             </p>
           </div>
@@ -36,23 +37,23 @@
           </div>
           <div class="card-body">
             <p>
-              「いつ」に対し思い出したら、スケジュールに空きがあるとき、月末にまとめて申請する<br>
-              「どこで」に対しオフィスの自席で申請する<br>
-              「どのデバイスで」に対し交通費はスマホ、他はpc<br>
-              その他にも申請を忘れてたり、pcでドキュメントを並べながら入力する、領収書をスマホで撮影しpcへ取り込んでから入力することもありました。
+              「いつ」…思い出したら、スケジュールに空きがあるとき、<span class="letter-accent">月末にまとめて</span>申請する。<br>
+              「どこで」…オフィスの自席で申請する。<br>
+              「どのデバイスで」…交通費はスマホ、<span class="letter-accent">交通費以外はpc</span>。<br>
+              その他にも申請を忘れてたり、pcでドキュメントを並べながら入力する、領収書をスマホで撮影しpcへ取り込んでから入力することがわかりました。
             </p>
           </div>
         </div>
       </div>
-      <div class="half">
+      <div class="card-container-half">
         <div class="card">
           <div class="card-header">
             3.Analysis
           </div>
           <div class="card-body">
             <p>
-              領収書を取れる状況でない、すぐやる意識がない、pcで申請したいということから来る「入力の後回し」と<br>
-              自分が把握しておかなければいけない項目があることから来る「入力の遅延」が起こっていることがわかりました。
+              領収書を取れる状況でない、すぐやる意識がない、pcで申請したいということから来る「<span class="letter-accent">入力の後回し</span>」と<br>
+              自分が把握しておかなければいけない項目があることから来る「<span class="letter-accent">入力の遅延</span>」が起こっていることがわかりました。
             </p>
           </div>
         </div>
@@ -73,7 +74,7 @@
           
         </div>
       </div>
-      <div class="half">
+      <div class="card-container-half">
         <div class="card">
           <div class="card-header">
             6.UserTest
@@ -99,7 +100,7 @@
           
         </div>
       </div>
-      <div class="half">
+      <div class="card-container-half">
         <div class="card">
           <div class="card-header">
             9.UserTest
