update:スタイル修正

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           5.Prototype#1
         </div>
         <div class="card-body">
-          <div class="card-body-widthwise">
+          <div class="widthwise">
             <img src="image/freee-Prototype1.png" alt="プロトタイプ第1案。アプリファーストビューの画像">
-            <div class="card-body-widthwise-sentence">
+            <div class="card-body-sentence">
               <p>
                 領収書が出たタイミングで「経費申請した」を押し<span class="letter-accent">タスクとして登録</span>することができます。申請忘れや思い出すという手間を省けることを意図しました。<br>
                 申請タスクからは詳細の追加や領収書の追加を好きなタイミングですることができます。
@@ -93,14 +93,14 @@
               </p>
             </div>
           </div>
-          <div class="card-body-widthwise">
-            <div class="card-body-widthwise-sentence">
+          <div class="widthwise-reverse">
+            <img src="image/freee-Prototype1-2.png" alt="プロトタイプ第1案。申請内容の画像">
+            <div class="card-body-sentence">
               <p>
                 会社独自のドキュメントを読まなくても入力ができるよう、その人に合った内容を提供。<br>
                 書く内容がわからず外部ファイルのドキュメントを見に行く手間を省いた。
               </p>
             </div>
-            <img src="image/freee-Prototype1-2.png" alt="プロトタイプ第1案。申請内容の画像">
           </div>
         </div>
       </div>
@@ -141,9 +141,9 @@
           8.Prototype#2
         </div>
         <div class="card-body">
-          <div class="card-body-widthwise">
+          <div class="widthwise">
             <img src="image/freee-Prototype2.png" alt="プロトタイプ第2案。アプリファーストビューの画像">
-            <div class="card-body-widthwise-sentence">
+            <div class="card-body-sentence">
               <p>
                 経費申請をするために<span class="letter-accent">ユーザーがアクションを起こした時に自動で</span>タスクとして管理（スマホで領収書だけ撮影した時やタイトルを入力した時など）。<br>
                 それに伴い「経費申請した」を無くし、ユーザーが「申請タスク」から「下書きリスト」に変更しました。
@@ -153,13 +153,13 @@
               </p>
             </div>
           </div>
-          <div class="card-body-widthwise">
-            <div class="card-body-widthwise-sentence">
+          <div class="widthwise-reverse">
+            <img src="image/freee-Prototype2-2.png" alt="プロトタイプ第2案。申請内容の画像">
+            <div class="card-body-sentence">
               <p>
                 ユーザーの動きに合わせ、それぞれの項目の中にヘルプを設置した。
               </p>
             </div>
-            <img src="image/freee-Prototype2-2.png" alt="プロトタイプ第2案。申請内容の画像">
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
             9.UserTest
           </div>
           <div class="card-body">
-            <p>a</p>
+            <p>スマホでわかる範囲だけ入力していた。</p>
           </div>
         </div>
         <div class="card">
