--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     <!-- 既存サービスの説明入れる -->
     <section class="content">
       <div class="card-container-half">
+      <div class="card-container-half">
         <div class="card">
           <div class="card-header">
             1.UserResearch
           </div>
+          <img src="image/freee-UserResearch.JPG">
           <div class="card-body">
             <p>
               まずは要求定義をするために調査します。思いつく限りの質問を出し、グループ化し整理します。<br>
               <span class="letter-accent">いつ、どこで、どのデバイスで</span>経費申請をしたかを聞く準備をします。
-              この際、ユーザーがエピソードや体験を話しやすいオープンクエスチョンにすることを気をつけました。
+              この時、ユーザーがエピソードや体験を話しやすいようにyes/noで答える質問ではないオープンクエスチョンにすることを気をつけました。
             </p>
           </div>
         </div>
@@ -38,12 +40,16 @@
           </div>
           <div class="card-body">
             <p>
-              いつ…思い出したら、スケジュールに空きがあるとき、<span class="letter-accent">月末にまとめて</span>申請する。<br>
-              どこで…オフィスの自席で申請する。<br>
-              どのデバイスで…交通費はスマホ、<span class="letter-accent">交通費以外はPC</span>。
+              いつ…思い出したら、スケジュールに空きがあるとき、<span class="letter-accent">月末にまとめて</span>
             </p>
             <p>
-              その他にも申請を忘れてたり、PCでドキュメントを並べながら入力する、領収書をスマホで撮影しpcへ取り込んでから入力することがわかりました。
+              どこで…その場、オフィスの自席
+            </p>
+            <p>
+              どのデバイスで…交通費はスマホ、<span class="letter-accent">交通費以外はPC</span>
+            </p>
+            <p>
+              その他にも申請を忘れてたり、PCでドキュメントを並べながら入力する、領収書をスマホで撮影しPCへ取り込んでから入力することがわかりました。
             </p>
           </div>
         </div>
@@ -76,14 +82,18 @@
           </div>
         </div>
       </div>
+    </div>
       <div class="card">
         <div class="card-header card-header-accent">
           5.Prototype#1
         </div>
         <div class="card-body">
           <div class="widthwise">
-            <img src="image/freee-Prototype1.png" alt="プロトタイプ第1案。アプリファーストビューの画像">
-            <div class="card-body-sentence">
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype1-1.png" alt="プロトタイプ第1案。アプリファーストビューの画像">
+                <img src="image/freee-Prototype1-2.png" alt="プロトタイプ第1案。アプリファーストビューの画像">
+              </div>
               <p>
                 領収書が出たタイミングで「経費申請した」を押し<span class="letter-accent">タスクとして登録</span>することができます。申請忘れや思い出すという手間を省けることを意図しました。<br>
                 申請タスクからは詳細の追加や領収書の追加を好きなタイミングですることができます。
@@ -92,13 +102,14 @@
                 また、申請したものを同じ階層に置くことで、経費申請したものが承認されたかのステータスを<span class="letter-accent">一目で確認できます</span>。
               </p>
             </div>
-          </div>
-          <div class="widthwise-reverse">
-            <img src="image/freee-Prototype1-2.png" alt="プロトタイプ第1案。申請内容の画像">
-            <div class="card-body-sentence">
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype1-3.png" alt="プロトタイプ第1案。申請内容の画像">
+                <img src="image/freee-Prototype1-4.png" alt="プロトタイプ第1案。申請内容の画像">
+              </div>
               <p>
                 会社独自のドキュメントを読まなくても入力ができるよう、その人に合った内容を提供。<br>
-                書く内容がわからず外部ファイルのドキュメントを見に行く手間を省いた。
+                書く内容がわからず外部ファイルのドキュメントを見に行く手間を省きました。
               </p>
             </div>
           </div>
@@ -111,11 +122,10 @@
           </div>
           <div class="card-body">
             <p>
-              アプリを開いたときにどこを押せばいいかわからすしばらくの間止まっていた。<br>
-              「経費申請した」を<span class="letter-accent">押されなかった</span>。
+              アプリを開いたときにどこを押せばいいかわからず、しばらくの間止まっていた。また、「経費申請した」を<span class="letter-accent">押されなかった</span>。
             </p>
             <p>
-              「申請経路、承認者、部門がわからない場合」は<span class="letter-accent">押されなかった</span>。<br>
+              「申請経路、承認者、部門がわからない場合」は<span class="letter-accent">押されなかった</span>。
               それぞれの項目の中でどれだかわからないけどこれかな、と選んでいた。スマホでの入力はここで終わり、PCのドキュメントを見に行く。
             </p>
           </div>
@@ -130,7 +140,7 @@
               また、経費申請ではなく経費精算だという文言の間違いがあった。
             </p>
             <p>
-              「申請経路がわからない場合」が活用れなかったのは、ヘルプが対応項目の下に来てしまっていることが原因で気づかなかったと考えた。<br>
+              「申請経路がわからない場合」が活用されなかったのは、ヘルプが対応項目の下に来てしまっていることが原因で気づかなかったと考えました。<br>
               また、ユーザーはヘルプを見て自分に合った項目内容を覚え、また項目一覧に戻り項目を選び、内容を選択することをしなければならない。<span class="letter-accent">ユーザーに考えさせる時間が長すぎる</span>と判断しました。
             </p>
           </div>
@@ -142,22 +152,32 @@
         </div>
         <div class="card-body">
           <div class="widthwise">
-            <img src="image/freee-Prototype2.png" alt="プロトタイプ第2案。アプリファーストビューの画像">
-            <div class="card-body-sentence">
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype2-1.png" alt="プロトタイプ第2案。アプリファーストビューの画像">
+                <img src="image/freee-Prototype2-2.png" alt="プロトタイプ第2案。アプリファーストビューの画像">
+              </div>
               <p>
                 経費申請をするために<span class="letter-accent">ユーザーがアクションを起こした時に自動で</span>タスクとして管理（スマホで領収書だけ撮影した時やタイトルを入力した時など）。<br>
-                それに伴い「経費申請した」を無くし、ユーザーが「申請タスク」から「下書きリスト」に変更しました。
+                それに伴い「経費申請した」を無くし、ユーザーが「申請タスク」から「下書きリスト」に変更しました。<br>
               </p>
               <p>
                 また、分析で分かったユーザーの意識よりボタンの文言を「申請する」から「経費精算する」に変更しました。
               </p>
-            </div>
-          </div>
-          <div class="widthwise-reverse">
-            <img src="image/freee-Prototype2-2.png" alt="プロトタイプ第2案。申請内容の画像">
-            <div class="card-body-sentence">
               <p>
-                ユーザーの動きに合わせ、それぞれの項目の中にヘルプを設置した。
+                その他にも、領収書を撮り貯めている人もいることがわかったので、領収書撮影をする導線も配置しました。
+              </p>
+            </div>
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype2-3.png" alt="プロトタイプ第2案。申請内容の画像">
+                <img src="image/freee-Prototype2-4.png" alt="プロトタイプ第2案。申請内容の画像">
+                <img src="image/freee-Prototype2-5.png" alt="プロトタイプ第2案。申請内容の画像">
+                <img src="image/freee-Prototype2-6.png" alt="プロトタイプ第2案。申請内容の画像">
+              </div>
+              <p>
+                ユーザーの動きに合わせ、それぞれの項目の中にヘルプを設置しました。<br>
+                また、自分が選択すべき対象を一目でわかるように選択項目より上に設置しました。
               </p>
             </div>
           </div>
@@ -169,7 +189,9 @@
             9.UserTest
           </div>
           <div class="card-body">
-            <p>スマホでわかる範囲だけ入力していた。</p>
+            <p>
+              「経費精算する」を押し、スマホでわかる範囲だけ入力するという理想の動きをしていました。意識調査では、これなら<span class="letter-accent">申請を忘れることがなくなりそう</span>という意見もいただきました。<br>
+            <p>また、申請経路など自分が選択すべき対象を迷わず選択できていました。</p>
           </div>
         </div>
         <div class="card">
@@ -177,7 +199,13 @@
             10.Analysis
           </div>
           <div class="card-body">
-            <p>a</p>
+            <p>
+              PCで入力しているものを調べたところ、参加者や会社名など覚えきれないものをPCで一度登録した内容からコピペしてた。これが入力の二度手間となっていることに気づきました。<br>
+              また、今は思い出すという手間を省けていないことにも気づきました。
+            </p>
+            <p>
+              自分が選択すべき対象を選ぶことはできたが、<span class="letter-accent">決まっている項目をわざわざ選択させる必要があるか</span>を検討しました。その結果、ユーザーにわざわざ選択させる必要はないと考えました。
+            </p>
           </div>
         </div>
       </div>
@@ -186,7 +214,35 @@
           11.Prototype#3
         </div>
         <div class="card-body">
-          
+          <div class="widthwise">
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype3-1.png" alt="プロトタイプ第3案。カレンダーと連携したアプリファーストビューの画像">
+                <img src="image/freee-Prototype3-2.png" alt="プロトタイプ第3案。カレンダーと連携したアプリファーストビューの画像">
+              </div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype3-3.png" alt="プロトタイプ第3案。カレンダーと連携したアプリファーストビューの画像">
+                <img src="image/freee-Prototype3-4.png" alt="プロトタイプ第3案。カレンダーと連携したアプリファーストビューの画像">
+              </div>
+              <p>
+                タスク管理するタイミングを<span class="letter-accent">予定が登録されたとき</span>にしました。具体的には、googleカレンダーと同期し、経費申請が発生する予定を登録したらアプリでタスクが登録されます。<br>
+                また、その時に参加者や内容も登録されるため、ユーザーはわざわざ<span class="letter-accent">PCからカレンダーに入力した内容と同じ内容を経費精算の際に入力することがなくなります</span>。これにより、経費申請がより効率化されます。
+              </p>
+            </div>
+            <div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype3-5.png" alt="プロトタイプ第3案。申請内容の画像">
+                <img src="image/freee-Prototype3-6.png" alt="プロトタイプ第3案。申請内容の画像">
+              </div>
+              <div class="card-body-img">
+                <img src="image/freee-Prototype3-7.png" alt="プロトタイプ第3案。申請内容の画像">
+                <img src="image/freee-Prototype3-8.png" alt="プロトタイプ第3案。申請内容の画像">
+              </div>
+              <p>
+                ユーザーの動きに合わせ、項目の中にヘルプを設置しました。また、個人で特定できている場合はあらかじめその情報を欄に記入させています。
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
