update:works詳細ページ追加

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="./image/icon.png">
     <meta name="description" content="ごとうはるかのポートフォリオサイト" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="./css/main.css" rel="stylesheet" type="text/css">
     <link href="./css/profile.css" rel="stylesheet" type="text/css">
@@ -52,6 +51,7 @@
                 <tr>
                   <td>2019年夏</td>
                   <td>
+                    学校祭広報web部署長<br>
                     株式会社サイバーエージェント 3dayインターン<br>
                     freee株式会社 2weekインターン<br>
                     株式会社エイチーム 3dayインターン<br>
