update:works_detail

--- a/portfoliosite.html
+++ b/portfoliosite.html
@@ -18,7 +18,41 @@
       </a>
     </div>
     <div id="descriptionHeader"></div>
-    
+    <section class="content">
+      <h2>概要</h2>
+      <p>このポートフォリオサイトに込めた思いを詳しく紹介します。</p>
+      <h2>テーマ</h2>
+      <p>このポートフォリオサイトのテーマは<span class="letter-accent">私の人柄やスキルを十分に伝える</span>です。</p>
+      <h3>デザインコンセプト</h3>
+      <p>名前である悠伽の「悠」を想像させる「<span class="letter-accent">海</span>」をデザインコンセプトとして設定しました。(はるかと読みます)</p>
+      <p>
+        悠は<span class="letter-accent">身も心も清められてゆったりと落ち着いた様子や気の長い様子</span>を表します。<br>
+        ゆったりと落ち着く様を感じて欲しいと思い、静かで時間を忘れられる存在である<span class="letter-accent">海</span>をデザインコンセプトとしました。
+      </p>
+      <p>
+        また、topページ下方(フッター)の自分の名前はゆっくりと流れる時間の中でも自分を見失わずしっかり確率させているという意味を込めて黒色にしています。
+      </p>
+      <p class="widthwise img img-small"><img src="./image/portfolio-1.png"></p>
+      <h2>ページ構成</h2>
+      <p>
+        プロフィール→スキル情報→作品紹介という構成になっています。<br>
+        スキル情報を作品紹介の前に持って来たのは、私はデザインだけでなくコーディングも得意としており、デザインとコーディングの架け橋となるような人材であるということをより知ってもらいたかったからです。
+      </p>
+      <h2>工夫点</h2>
+      <p>
+        ヘッダーはスマートフォンで見る際も追従形式にしました。ハンバーガーメニューで表さなければいけないほどの膨大な情報はなく、ハンバーガーメニューを押す労力をかけることが必要ないと判断したからです。
+      </p>
+      <p></p>
+      <p>また、波の表現や作品情報の管理は<span class="letter-accent">プラグインなどは一切使わず</span>、自力でコーディングしました。<br>
+        これは最適なプラグインを探す労力、プラグインを使用してカスタムする労力よりも自分でコーディングした方がはるかに早いと思ったからです。<br>
+        これにより作品情報の管理が格段に楽になりました。具体的には、一度作品タイトル、詳細を入力すればtopページの作品一覧に載る、作品詳細ページでは画像と詳細、前後の作品が載るようになっています。
+      </p>
+      <p class="widthwise img img-small">
+        <img src="./image/portfolio-2.png">
+        <img src="./image/portfolio-3.png">
+        <img src="./image/portfolio-4.png">
+      </p>
+    </section>
     <div id="otherWorks">
       <p>OTHER WORKS</p>
       <div id="otherWorksContainer"></div>
