update:動画埋め込みをやめ、youtubeリンクの埋め込みにした

--- a/motioCapture.html
+++ b/motioCapture.html
@@ -46,7 +46,7 @@
         実際に動くと画面内の棒人間が人間と同じ動きをします。
       </p>
       <p class="widthwise img img-full">
-        <video src="./image/mocap-2.MOV" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/H-wMZqA4jJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
       <h3>キャラクターデザイン</h3>
       <p>プレイヤーと敵のキャラクターデザインをします。<br>
@@ -57,6 +57,9 @@
       </p>
       <h3>キャラクターに動きをつける</h3>
       <p>先ほどの動きのついた棒人間にキャラクターを肉付けします。</p>
+      <p class="widthwise img img-full">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hrHQ8IYcmUc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
       <h3>ゲーム製作</h3>
       <p>動きのついたキャラクターができたらunityにインポートします。<br>
         ゲームフィールドにリアルな動きをするキャラクターを配置することでまるで現実世界のように見えます。
