--- a/freeeIntern.html
+++ b/freeeIntern.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="ポートフォリオサイト,ポートフォリオ" />
     <meta name="description" content="ごとうはるかのポートフォリオサイト" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="./image/icon.png">
+    <link rel="shortcut icon" href="./image/favicon.png">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="./css/main.css" rel="stylesheet" type="text/css">
     <link href="./css/card.css" rel="stylesheet" type="text/css">
