--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ごとうはるかのポートフォリオサイト</title>
     <meta name="keywords" content="ポートフォリオサイト,ポートフォリオ" />
-    <link rel="shortcut icon" href="./image/icon.png">
+    <link rel="shortcut icon" href="./image/favicon.ico">
     <meta name="description" content="ごとうはるかのポートフォリオサイト" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
