--- a/index.html
+++ b/index.html
@@ -51,11 +51,16 @@
                 <tr>
                   <td>2019年夏</td>
                   <td>
-                    学校祭広報web部署長<br>
                     株式会社サイバーエージェント 3dayインターン<br>
                     freee株式会社 2weekインターン<br>
                     株式会社エイチーム 3dayインターン<br>
                     株式会社エイチーム アルバイト(継続中)
+                  </td>
+                </tr>
+                <tr>
+                  <td>2019年秋</td>
+                  <td>
+                    学校祭広報web部署長
                   </td>
                 </tr>
                 <tr>
