不具合修正

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
       <p>© 2020 Haruka Goto</p>
     </footer>
-    <script src="js/main.js"></script>
-    <script src="js/wave.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/wave.js"></script>
   </body>
 </html>
