--- a/motioCapture.html
+++ b/motioCapture.html
@@ -71,6 +71,6 @@
       <p>OTHER WORKS</p>
       <div id="otherWorksContainer"></div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
