update:gaトラッキングタグ追加

--- a/freeeIntern.html
+++ b/freeeIntern.html
@@ -6,10 +6,19 @@
     <meta name="keywords" content="ポートフォリオサイト,ポートフォリオ" />
     <meta name="description" content="ごとうはるかのポートフォリオサイト" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="./image/favicon.png">
+    <link rel="shortcut icon" href="./image/favicon.ico">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="./css/main.css" rel="stylesheet" type="text/css">
     <link href="./css/card.css" rel="stylesheet" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160706790-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-160706790-1');
+    </script>
   </head>
   <body>
     <div class="headerIcon">
