--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link href="./css/profile.css" rel="stylesheet" type="text/css">
     <link href="./css/skills.css" rel="stylesheet" type="text/css">
     <link href="./css/works.css" rel="stylesheet" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160706790-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-160706790-1');
+    </script>
   </head>
   <body>
     <header>
