--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 名古屋市立大学芸術工学部<br>
                 情報環境デザイン学科 学部3年
               </p>
+              <p>「<span class="profile-accent">情報整理されたデザインでユーザーの心をつかみたい！</span>」</p>
               <table>
                 <tr>
                   <td>2019年夏</td>
