update:プロトタイプのリンク追加

--- a/freee1weekIntern.html
+++ b/freee1weekIntern.html
@@ -110,7 +110,7 @@
           </div>
         </div>
       </div>
-    </div>
+      </div>
       <div class="card">
         <div class="card-header card-header-accent">
           5.Prototype#1
@@ -273,6 +273,8 @@
           </div>
         </div>
       </div>
+      <h2>プロトタイプ</h2>
+      <p><a href="https://xd.adobe.com/view/97f2328a-9c34-402d-531b-386b6d46cc29-e1c3/" target="blank" class="product-link">こちらをご覧ください></a></p>
     </section>
     <div id="otherWorks">
       <p>OTHER WORKS</p>
