css設計の見直し(横並びをhalfとwidthwiseで区別)

--- a/EdelRoteJazzOrchesterHP.html
+++ b/EdelRoteJazzOrchesterHP.html
@@ -33,10 +33,8 @@
       <h2>期間</h2>
       <p>2019年3月1日〜3月15日 (15日間)</p>
       <h2>作品紹介</h2>
-      <p class="widthwise img img-full">
+      <p class="widthwise oblong">
         <img src="./image/edel-1.png">
-      </p>
-      <p class="widthwise img  img-small">
         <img src="./image/edel-2.png">
         <img src="./image/edel-3.png">
         <img src="./image/edel-4.png">
