--- a/a-teamIntern.html
+++ b/a-teamIntern.html
@@ -35,7 +35,7 @@
         満足した時間を過ごしたことは過ごしたことは、時間を有効に使ったことになると定義しました。
       </p>
       <h3>第二位受賞</h3>
-      <p class="widthwise img"><img src="./image/ateam-10.jpg"></p>
+      <p class="widthwise oblong"><img src="./image/ateam-10.jpg"></p>
       <h2>期間</h2>
       <p>2019年8月30日〜9月1日 (３日間)</p>
       <h2>使用ツール</h2>
@@ -46,7 +46,7 @@
         javascript
       </p>
       <h2>ペルソナ</h2>
-      <p class="widthwise img img-small"><img src="./image/ateam-1.png"></p>
+      <p class="widthwise"><img src="./image/ateam-1.png"></p>
       <p>退職後特にやることもなく時間を持て余している田舎のおじいちゃん、山田信之さん65歳。<br>
         四国に住んでいて、娘夫婦が東京に住んでおり孫もいる。<br>
         日中は特にやることもなくテレビを見て過ごしている。<br>
@@ -81,12 +81,12 @@
         ・帰省時の満足度が上がり、帰省日数が増加する
       </p>
       <h2>UIデザイン</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/ateam-4.png">
         <img src="./image/ateam-5.png">
         <img src="./image/ateam-6.png">
       </p>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/ateam-7.png">
         <img src="./image/ateam-8.png">
         <img src="./image/ateam-9.png">
