--- a/blockgame.html
+++ b/blockgame.html
@@ -37,15 +37,15 @@
         右：プレイヤー１
       </p>
       <h3>ゲーム開始前</h3>
-      <p class="widthwise img">
+      <p class="widthwise oblong">
         <img src="./image/block-1.png">
       </p>
       <h3>最初に障害ブロック出現(このマスには置けない)</h3>
-      <p class="widthwise img">
+      <p class="widthwise oblong">
         <img src="./image/block-2.png">
       </p>
       <h3>プレイヤー０がブロックを置くと次の人のターンになる</h3>
-      <p class="widthwise img">
+      <p class="widthwise oblong">
         <img src="./image/block-3.png">
       </p>
       <h2>使用ツール</h2>
@@ -65,6 +65,7 @@
           ブロックの中心をクリックする場所とし、十字架型ブロックなら中央の上下左右に他のブロックがないかの検出をしました。<br>
           ２次元配列を用いての処理はミスがたくさん起こりましたが簡易的な記述をすることができました。
         </p>
+      </section>
     <div id="otherWorks">
       <p>OTHER WORKS</p>
       <div id="otherWorksContainer"></div>
