--- a/fasTag.html
+++ b/fasTag.html
@@ -33,9 +33,9 @@
       <h2>期間</h2>
       <p>2019年11月1日〜11月3日 (３日間)</p>
       <h2>エイチーム賞受賞</h2>
-      <p class="widthwise img"><img src="./image/fastag-1.jpg"></p>
+      <p class="widthwise oblong"><img src="./image/fastag-1.jpg"></p>
       <h2>作品紹介</h2>
-      <p class="widthwise img img-medium">
+      <p class="widthwise oblong">
         <img src="./image/fastag-2.png">
         <img src="./image/fastag-3.png">
       </p>
@@ -64,7 +64,7 @@
       <p>わかるを身近に</p>
       <h2>技術説明</h2>
       <p>本の情報、コメント情報をfirebaseで管理し、flackとpythonでデータの取り出しを行っています。</p>
-      <p class="widthwise img img-medium">
+      <p class="widthwise oblong">
         <img src="./image/fastag-4.png">
       </p>
     </section>
