--- a/freee1dayIntern.html
+++ b/freee1dayIntern.html
@@ -40,7 +40,7 @@
       <h2>使用ツール</h2>
       <p>XD</p>
       <h2>既存サービス</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/freee1day-1.jpg">
         <img src="./image/freee1day-2.png">
         <img src="./image/freee1day-3.png">
@@ -48,12 +48,12 @@
       <h2>作成過程</h2>
       <p>実際に使用して見たところ入力漏れをした時の修正が複雑でわかりづらかったので、入力漏れの修正をわかりやすくするような改善案を考えました。</p>
       <h3>ワイヤー</h3>
-      <p class="widthwise img"><img src="./image/freee1day-4.png"></p>
+      <p class="widthwise oblong"><img src="./image/freee1day-4.png"></p>
       <p>・ホーム（打刻）画面に今週の未入力の勤怠があることを伝える<br>
         ・カレンダー画面でいつ入力できていないのかをわかりやすく明示する<br>
       </p>
       <h3>改善案</h3>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/freee1day-5.png">
         <img src="./image/freee1day-6.png">
         <img src="./image/freee1day-7.png">
