--- a/freee1weekIntern.html
+++ b/freee1weekIntern.html
@@ -41,7 +41,7 @@
       <h2>使用ツール</h2>
       <p>XD</p>
       <h2>既存サービス</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/freee1week-1.png">
         <img src="./image/freee1week-2.png">
         <img src="./image/freee1week-3.png">
@@ -116,7 +116,7 @@
           5.Prototype#1
         </div>
         <div class="card-body">
-          <div class="widthwise">
+          <div class="half">
             <div>
               <div class="card-body-img">
                 <img src="image/freee-Prototype1-1.png" alt="プロトタイプ第1案。アプリファーストビューの画像">
@@ -179,7 +179,7 @@
           8.Prototype#2
         </div>
         <div class="card-body">
-          <div class="widthwise">
+          <div class="half">
             <div>
               <div class="card-body-img">
                 <img src="image/freee-Prototype2-1.png" alt="プロトタイプ第2案。アプリファーストビューの画像">
@@ -242,7 +242,7 @@
           11.Prototype#3
         </div>
         <div class="card-body">
-          <div class="widthwise">
+          <div class="half">
             <div>
               <div class="card-body-img">
                 <img src="image/freee-Prototype3-1.png" alt="プロトタイプ第3案。カレンダーと連携したアプリファーストビューの画像">
