--- a/freeeIntern.html
+++ b/freeeIntern.html
@@ -35,8 +35,8 @@
       <h2>作品紹介</h2>
       <p>コンテンツのDEMOと打刻のDEMOに分けています<br>
         ※作品持ち出し禁止のため動画です</p>
-      <p class="widthwise img img-full">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/D2wLEll-yO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p class="widthwise full">
+        <iframe src="https://www.youtube.com/embed/D2wLEll-yO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
       <p>アプリ上で出勤したら勤怠管理画面にリアルタイムで反映されています。</p>
       <h2>使用ツール</h2>
@@ -58,27 +58,19 @@
         毎日飽きず勤怠を入力するために、せっかくなら楽しく習慣化できるほうがいいと思い、<span class="letter-accent">コレクションゲーム</span>を提案します。
       </p>
       <h2>UIデザイン</h2>
-      <p class="widthwise img img-large">
+      <p class="widthwise oblong">
         <img src="./image/freee2week-1.png">
         <img src="./image/freee2week-2.png">
-      </p>
-      <p class="widthwise img img-large">
         <img src="./image/freee2week-3.png">
         <img src="./image/freee2week-4.png">
-      </p>
-      <p class="widthwise img img-large">
         <img src="./image/freee2week-5.png">
         <img src="./image/freee2week-6.png">
-      </p>
-      <p class="widthwise img img-large">
         <img src="./image/freee2week-7.png">
       </p>
       <h2>技術説明</h2>
-      <p class="widthwise img img-large">
+      <p class="widthwise oblong">
         <img src="./image/freee2week-8.png">
         <img src="./image/freee2week-9.png">
-      </p>
-      <p class="widthwise img img-large">
         <img src="./image/freee2week-10.png">
         <img src="./image/freee2week-11.png">
       </p>
