--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="content">
           <p class="content-header">PLOFILE</p>
-          <div class="widthwise align-center">
+          <div class="half align-center">
             <div class="profile-img">
               <img src="./image/profile-img.png" class="profile-img" alt="プロフィール画像">
             </div>
@@ -78,7 +78,7 @@
                   <td>freee株式会社 1weekインターン</td>
                 </tr>
               </table>
-              <div class="widthwise">
+              <div class="half">
                 <div class="button github">
                   <a href="https://github.com/haru6999" target="_blank">
                     <img src="./image/github.png" alt="github" class="button-img">
