--- a/moneyManegement.html
+++ b/moneyManegement.html
@@ -33,7 +33,7 @@
       <h2>期間</h2>
       <p>2019年6月10日〜6月14日 (５日間)</p>
       <h2>作品紹介</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/money-1.png">
         <img src="./image/money-2.png">
         <img src="./image/money-3.png">
