--- a/motioCapture.html
+++ b/motioCapture.html
@@ -33,7 +33,7 @@
       <h2>期間</h2>
       <p>2019年6月14日〜7月26日 (２ヶ月間)</p>
       <h2>作品紹介</h2>
-      <p class="widthwise img img-full">
+      <p class="widthwise full">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zp95jKwoecg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
       <h3>物語</h3>
@@ -54,19 +54,19 @@
         そして体の関節ごとに光が反射する球をつけます。<br>
         実際に動くと画面内の棒人間が人間と同じ動きをします。
       </p>
-      <p class="widthwise img img-full">
+      <p class="widthwise full">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/H-wMZqA4jJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
       <h3>キャラクターデザイン</h3>
       <p>プレイヤーと敵のキャラクターデザインをします。<br>
         それぞれどのキャラクターがどの属性かわかりやすくなるようにしています。
       </p>
-      <p class="widthwise img">
+      <p class="widthwise oblong">
         <img src="./image/mocap-3.png">
       </p>
       <h3>キャラクターに動きをつける</h3>
       <p>先ほどの動きのついた棒人間にキャラクターを肉付けします。</p>
-      <p class="widthwise img img-full">
+      <p class="widthwise full">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/hrHQ8IYcmUc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
       <h3>ゲーム製作</h3>
