--- a/portfoliosite.html
+++ b/portfoliosite.html
@@ -43,7 +43,7 @@
       <p>
         また、topページ下方(フッター)の自分の名前はゆっくりと流れる時間の中でも自分を見失わずしっかり確率させているという意味を込めて黒色にしています。
       </p>
-      <p class="widthwise img img-small"><img src="./image/portfolio-1.png"></p>
+      <p class="widthwise oblong"><img src="./image/portfolio-1.png"></p>
       <h2>ページ構成</h2>
       <p>
         プロフィール→スキル情報→作品紹介という構成になっています。<br>
@@ -58,13 +58,13 @@
         しかし既存のものは他の記事がランダムや関連順に表示されています。<br>
         このポートフォリオではランダムや関連順ではなく<span class="letter-accent">全ての作品を見てもらい</span>ので前後の作品だとわかるように矢印を配置しました。
       </p>
-      <p class="widthwise img"><img src="./image/portfolio-5.png"></p>
+      <p class="widthwise oblong"><img src="./image/portfolio-5.png"></p>
       <h3>自力コーディング</h3>
       <p>波の表現や作品情報の管理は<span class="letter-accent">プラグインなどは一切使わず</span>、自力でコーディングしました。<br>
         これは最適なプラグインを探す労力、プラグインを使用してカスタムする労力よりも自分でコーディングした方がはるかに早いと思ったからです。<br>
         これにより作品情報の管理が格段に楽になりました。具体的には、一度作品タイトル、詳細を入力すればtopページの作品一覧に載る、作品詳細ページでは画像と詳細、前後の作品が載るようになっています。
       </p>
-      <p class="widthwise img img-small">
+      <p class="widthwise oblong">
         <img src="./image/portfolio-2.png">
         <img src="./image/portfolio-3.png">
         <img src="./image/portfolio-4.png">
