--- a/schoolFestivalPreSite.html
+++ b/schoolFestivalPreSite.html
@@ -43,7 +43,7 @@
         jQuery
       </p>
       <h2>作品紹介</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/pre-1.png">
         <img src="./image/pre-2.png">
         <img src="./image/pre-3.png">
