--- a/schoolFestivalSite.html
+++ b/schoolFestivalSite.html
@@ -42,9 +42,11 @@
         jQuery
       </p>
       <h2>作品紹介</h2>
-      <p class="widthwise img img-medium">
+      <p class="widthwise">
         <img src="./image/geikousai-1.png">
         <img src="./image/geikousai-2.png">
+      </p>
+      <p class="widthwise oblong">
         <img src="./image/geikousai-3.png">
         <img src="./image/geikousai-4.png">
       </p>
