--- a/ultraSole.html
+++ b/ultraSole.html
@@ -47,12 +47,12 @@
         google apps script
       </p>
       <h2>作品紹介</h2>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/ultrasole-1.png">
         <img src="./image/ultrasole-2.png">
         <img src="./image/ultrasole-3.png">
       </p>
-      <p class="widthwise img"><img src="./image/ultrasole-4.png"></p>
+      <p class="widthwise oblong"><img src="./image/ultrasole-4.png"></p>
       <p>快適な歩行はもちろんのこと、ウルトラソールに内蔵されている圧力計から歩行時の重心移動を測定し、<span class="letter-accent">あなたの歩行を改善できる的確なアドバイスを受信できます</span>。</p>
       <p>製品概要としてはまずこのインソール本体。この本体に圧力計、バッテリーが内蔵されており、本体を靴に入れていただき、従来通りインソールとしてご使用いただきます。<br>
         アプリケーションは、ウルトラソールを使っていただいた際に計測したデータから歩行を点数化し、具体的なアドバイスを提供できます。<br>
@@ -64,13 +64,13 @@
         スプレッドシートに保存された値をgoogle apps scriptを使用してjson型にします。<br>
         それをVue.jsを用いてアプリケーションに数値を反映させています。
       </p>
-      <p class="widthwise img img-medium">
+      <p class="widthwise oblong">
         <img src="./image/ultrasole-5.png">
         <img src="./image/ultrasole-6.png">
       </p>
       <h3>デザイン説明</h3>
       <p>圧力センサーの値が基準より低かったらアプリ内のインソールに緑色で、基準より高かったら赤色で表示することで視覚的にわかりやすく伝えています。</p>
-      <p class="widthwise img">
+      <p class="widthwise">
         <img src="./image/ultrasole-1.png">
       </p>
       <h2>感想</h2>
