--- a/diagnosticChart.html
+++ b/diagnosticChart.html
@@ -43,7 +43,7 @@
         jQuery
       </p>
       <h2>作品紹介</h2>
-      <p class="widthwise img img-medium">
+      <p class="widthwise oblong">
         <img src="./image/chart-1.png">
         <img src="./image/chart-2.png">
         <img src="./image/chart-3.png">
