スタイル整理、header統一

--- a/freee1weekIntern.html
+++ b/freee1weekIntern.html
@@ -21,11 +21,18 @@
     </script>
   </head>
   <body>
-    <div class="headerIcon">
-      <a href="./index.html#works">
-        <img src="./image/toTop.png" alt="top">
-      </a>
-    </div>
+    <header>
+      <div class="nav">
+        <a href="./index.html">
+          <img src="./image/icon.png" alt="いるかのアイコン">
+        </a>
+      </div>
+      <div class="nav-list">
+        <p class="nav-item"><a href="./index.html#profile">PLOFILE</a></p>
+        <p class="nav-item"><a href="./index.html#skills">SKILLS</a></p>
+        <p class="nav-item"><a href="./index.html#works">WORKS</a></p>
+      </div>
+    </header>
     <div id="descriptionHeader"></div>
     <!-- 既存サービスの説明入れる -->
     <section class="content">
