方向キーによるページ遷移の催促ポップアップ、id整理

--- a/EdelRoteJazzOrchesterHP.html
+++ b/EdelRoteJazzOrchesterHP.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>私の所属する音楽サークル 名古屋大学軽音楽部ジャズセクション Edel Röte Jazz Orchesterの公式ホームページを製作しました。</p>
       <h2>期間</h2>
