--- a/a-teamIntern.html
+++ b/a-teamIntern.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>定年後の元気なおじさん・おばさんが時間を有効活用できるサービス</p>
       <h3>時間を有効活用とは</h3>
