--- a/diagnosticChart.html
+++ b/diagnosticChart.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>私の通う学校名古屋市立大学芸術工学部の学祭「芸工祭」の学内に向けた適部署診断チャートです。<br>
         芸工祭は１〜３年生がそれぞれ部署に所属し生徒主体で開催されます。<br>
