--- a/fasTag.html
+++ b/fasTag.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>東海地区最大級学生ハッカソンOthloHack2019で製作した、メモの備わった電子書籍サービスです。<br></p>
       <h2>期間</h2>
