--- a/freee1dayIntern.html
+++ b/freee1dayIntern.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>freee株式会社の既存サービス「人事労務freee」を<br>
         ・いまより入力が効率化されること<br>
