--- a/freee1weekIntern.html
+++ b/freee1weekIntern.html
@@ -27,6 +27,10 @@
           <img src="./image/icon.png" alt="いるかのアイコン">
         </a>
       </div>
+      <p id="balloon">
+        ←→(方向キー)で作品内の<br>
+        ページ移動ができます
+      </p>
       <div class="nav-list">
         <p class="nav-item"><a href="./index.html#profile">PLOFILE</a></p>
         <p class="nav-item"><a href="./index.html#skills">SKILLS</a></p>
@@ -35,7 +39,7 @@
     </header>
     <div id="descriptionHeader"></div>
     <!-- 既存サービスの説明入れる -->
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>freee株式会社の既存サービス「会計ソフトfreee」を<br>
         ・いまより従業員の経費申請が効率化されること<br>
