--- a/freeeIntern.html
+++ b/freeeIntern.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>freeeAPIを使用して作成した最高の勤怠管理システム、コレクションゲーム型勤怠管理アプリ</p>
       <h2>期間</h2>
