--- a/moneyManegement.html
+++ b/moneyManegement.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>jQueryの勉強のために作った家計簿アプリです</p>
       <h2>期間</h2>
