--- a/ultraSole.html
+++ b/ultraSole.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>
         <span class="letter-accent">歩行を改善し健康面改善をすることができる</span>究極のインソール、ウルトラソールです。<br>
