--- a/blockgame.html
+++ b/blockgame.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>WebSocketを用いた対戦型ブロックゲーム</p>
       <h2>期間</h2>
