--- a/motioCapture.html
+++ b/motioCapture.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>モーションキャプチャーを用いたゲーム製作</p>
       <h2>期間</h2>
