--- a/portfoliosite.html
+++ b/portfoliosite.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>このポートフォリオサイトに込めた思いを詳しく紹介します。</p>
       <h2>期間</h2>
