--- a/schoolFestivalSite.html
+++ b/schoolFestivalSite.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div id="descriptionHeader"></div>
-    <section class="content">
+    <section id="content">
       <h2>概要</h2>
       <p>私の通う学校名古屋市立大学芸術工学部の学祭「芸工祭」の学外に向けた告知サイトです。<br>
         私が長を務める広報web部署のメンバーと作成しました。
